Changelog
===========

0.0.4
---------------------------------------

Features:

* updated a tool chain
* add a dos batch command ceedling.bat
* file project.yml moved to the top directory
* add fixed path to the tool chain
* add vscode configuration files for a debug support

Documentation:

* updated tools' versions, links and their installation (gcovr 8.3,...)
* add a new chapter "Verify installation"
* updated an usage description
* updated an image with a result for a new version of gcov
* add a new documentation ./doc/debugging.md

0.0.3
---------------------------------------

Features:

* add examples GPIO, LED and their testing, including their coverage

Documentation:

* add a picture with a gcov coverage results
* add a documentation slow_start.md describing a project structure and unit tests

0.0.2
---------------------------------------

Features:

* gcov code coverage report plugin enabled for a waf build system
* add an extra environment "gcc_ia64" for a ceedling build context

Documentation:

* add gcov install and usage steps in the file README.md

Fix:

* set "mcal" directory instead of "app", for parsing a source files in the ceedling 


0.0.1
---------------------------------------

Features:

* ceedling plugin for a waf build system

Documentation:

* add README.md how to install and use a current version