@@ -1,0 +1,3 @@
+$env:PATH +=';C:\xRuby30-x64\bin\'
+$env:PATH +=';C:\Ruby30-x64\msys64\mingw64\bin'
+$env:PATH +=";C:\Users\$env:USERNAME\AppData\Local\Programs\Python\Python312\Scripts\"
